# TripSphere

./: .gitignore  CHANGELOG.md  Developer guide.md  Makefile  README.md  Taskfile.yaml  architecture.md  docker-compose.yaml  higress-config.yaml  产品需求文档.md  文件服务技术方案.md  概览.md
trip-chat-assistant/: pyproject.toml
trip-chat-assistant/src/chat_assistant/: __main__.py  agent.py
trip-chat-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
trip-chat-service/libs/tripsphere/: README.md
trip-chat-service/src/chat/: __main__.py  asgi.py  exceptions.py  models.py  server.py
trip-chat-service/src/chat/agent/: _context.py  _facade.py  _remote.py  connection.py  context.py  facade.py  memory.py  session.py
trip-chat-service/src/chat/assistant/: agent.py  context.py
trip-chat-service/src/chat/cli/: main.py
trip-chat-service/src/chat/common/: dependencies.py  deps.py  exceptions.py  parts.py  schema.py
trip-chat-service/src/chat/config/: __init__.py  defaults.py  logging.py  mem0.py  settings.py  telemetry.py
trip-chat-service/src/chat/controllers/: __init__.py  chat.py  conversation.py  memory.py  message.py  task.py
trip-chat-service/src/chat/conversation/: default.py  entities.py  manager.py  models.py  repositories.py  repository.py
trip-chat-service/src/chat/grpc/: conversation.py  metadata.py  response.py  server.py  session.py
trip-chat-service/src/chat/internal/: manager.py  repository.py
trip-chat-service/src/chat/memory/: entities.py  manager.py  models.py  repositories.py
trip-chat-service/src/chat/nacos/: client.py
trip-chat-service/src/chat/prompts/: _agent.py  agent.py  assistant.py
trip-chat-service/src/chat/routers/: conversation.py  health.py  memory.py  message.py
trip-chat-service/src/chat/task/: entities.py  manager.py  models.py  repositories.py
trip-chat-service/src/chat/utils/: base64.py  pagination.py  uuid.py
trip-chat-service/tests/unit/agent/: test_connection.py
trip-chat-service/tests/unit/conversation/: test_default.py
trip-chat-service/tests/unit/grpc/: test_metadata.py
trip-chat-service/tests/unit/routers/: test_conversation.py  test_message.py
trip-itinerary-planner/: .env.example  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yaml  env.example  pyproject.toml  test_workflow.py
trip-itinerary-planner/examples/: example_client.py
trip-itinerary-planner/libs/: proto
trip-itinerary-planner/libs/tripsphere/: README.md  pyproject.toml
trip-itinerary-planner/scripts/: test_workflow.py
trip-itinerary-planner/src/itinerary_planner/: __init__.py  asgi.py  server.py
trip-itinerary-planner/src/itinerary_planner/_deprecated/: nodes.py  workflow.py
trip-itinerary-planner/src/itinerary_planner/_planning/: nodes.py  workflow.py
trip-itinerary-planner/src/itinerary_planner/agent/: card.py  executor.py  nodes.py  state.py  workflow.py
trip-itinerary-planner/src/itinerary_planner/common/: deps.py
trip-itinerary-planner/src/itinerary_planner/config/: defaults.py  logging.py  settings.py
trip-itinerary-planner/src/itinerary_planner/grpc/: metadata.py  planner.py
trip-itinerary-planner/src/itinerary_planner/models/: activity.py  itinerary.py  planning.py
trip-itinerary-planner/src/itinerary_planner/nacos/: ai.py  client.py  naming.py  utils.py
trip-itinerary-planner/src/itinerary_planner/planning/: nodes.py  state.py  workflow.py
trip-itinerary-planner/src/itinerary_planner/prompts/: workflow.py
trip-itinerary-planner/src/itinerary_planner/routers/: planning.py
trip-itinerary-planner/src/itinerary_planner/tools/: attractions.py  geocoding.py
trip-itinerary-planner/src/itinerary_planner/utils/: sse.py
trip-itinerary-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
trip-itinerary-service/libs/tripsphere/: pyproject.toml
trip-itinerary-service/scripts/: test_grpc_client.py
trip-itinerary-service/src/itinerary/: __main__.py  server.py
trip-itinerary-service/src/itinerary/config/: __init__.py  defaults.py  logging.py  settings.py  telemetry.py
trip-itinerary-service/src/itinerary/grpc/: itinerary.py  metadata.py  planning.py
trip-itinerary-service/src/itinerary/itinerary/: models.py  repositories.py  stores.py
trip-itinerary-service/src/itinerary/nacos/: ai.py  client.py  naming.py  utils.py
trip-itinerary-service/src/itinerary/services/: metadata.py
trip-itinerary-service/src/itinerary/utils/: uuid.py
trip-itinerary-service/tests/unit/grpc/: test_metadata.py
trip-itinerary-service/tests/unit/services/: test_metadata.py
trip-journey-assistant/: .dockerignore  .env.example  .gitignore  Dockerfile  Taskfile.yaml  pyproject.toml
trip-journey-assistant/libs/tripsphere/: pyproject.toml
trip-journey-assistant/src/journey_assistant/: __main__.py  agent.py  asgi.py
trip-journey-assistant/src/journey_assistant/config/: settings.py  telemetry.py
trip-journey-assistant/src/journey_assistant/nacos/: ai.py  utils.py
trip-review-summary/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Taskfile.yaml  buf.gen.yaml  pyproject.toml
trip-review-summary/examples/: a2a_client.py  a2a_client_example.py  local_serch.py  local_serch_example.py
trip-review-summary/libs/rocketmq/: pyproject.toml
trip-review-summary/libs/tripsphere/: pyproject.toml
trip-review-summary/scripts/: batch_reviews.py
trip-review-summary/src/review_summary/: __main__.py  asgi.py  celery.py  models.py  rocketmq.py
trip-review-summary/src/review_summary/agent/: __main__.py  agent.py  agent_executor.py  card.py  (+3 more)
trip-review-summary/tests/: mongo_test.py  test_agent.py  test_client.py
trip-review-summary/tests/fixtures/: entities.json  entities.parquet  entities_019b7ecb-616b-70ce-af4a-755199b8064b.parquet  entities_019b87f2-4107-7199-80ff-3d24c91943ad.parquet  relationships_019b7ecb-616b-70ce-af4a-755199b8064b.parquet  relationships_019b87f2-4107-7199-80ff-3d24c91943ad.parquet  reviews.json  text_units.json  text_units.parquet  text_units_019b7e54-d609-70a1-9142-c75f8504cd42.parquet
(+538 files in other folders)
