[project]
name = "itinerary"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Senyu Xie", email = "senyuxie@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.75.0",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "tripsphere",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.75.0",
    "mypy>=1.18.2",
    "mypy-protobuf>=3.6.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "types-grpcio>=1.0.0.20250914",
]

[tool.uv.sources]
tripsphere = { workspace = true }

[tool.uv.workspace]
members = ["libs/tripsphere"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["libs/tripsphere"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]