[project]
name = "review-summary"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[all,http-server]>=0.3.20",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "motor>=3.7.1",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "rocketmq>=5.0.0",
    "tripsphere>=0.1.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
tripsphere = { workspace = true }
rocketmq = { workspace = true }

[tool.uv.workspace]
members = ["libs/tripsphere", "libs/rocketmq"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["libs/tripsphere", "libs/rocketmq"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
