[project]
name = "review-summary"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[all]>=0.3.22",
    "grpcio>=1.76.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "opentelemetry-distro[otlp]>=0.60b1",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "rocketmq-python-client>=5.0.9",
    "tripsphere>=0.1.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
    "mypy>=1.19.1",
    "mypy-protobuf>=4.0.0",
    "pyright>=1.1.407",
    "types-grpcio>=1.0.0.20251009",
]

[tool.uv.sources]
tripsphere = { workspace = true }

[tool.uv.workspace]
members = ["libs/tripsphere"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["libs/tripsphere"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
