[project]
name = "rocketmq"
version = "5.0.9"
readme = "README.md"
dependencies = [
    "grpcio>=1.5.0",
    "grpcio-tools>=1.5.0",
    "protobuf>=6.32.1",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "opentelemetry-exporter-otlp>=1.33.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
